Fixing container double scroll when reaching end of page

--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -14,17 +14,15 @@
 
 html,
 body {
-    margin: 0;
     display: flex;
-    place-items: center;
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
 #root {
-    height: -webkit-fill-available;
-    width: -webkit-fill-available;
-    overflow: auto;
+    height: 100%;
+    width: 100%;
     background: var(--bg-gradient);
 }
 
